# rt_opt

./: LICENSE  README.md  demo.py  main.py  optimizer_statistics.html  optimizer_statistics_15D.html  optimizer_statistics_2D.html  setup.cfg
demo/: demo.py  requirements.txt
demo/results/: optimizer_statistics_15D.html  optimizer_statistics_2D.html
demo_results/: optimizer_statistics_15D.html  optimizer_statistics_2D.html
rt_opt/: global_search.py  local_search.py  optimizer.py  testproblems_shifted.py
rt_optimizer/: global_search.py  local_search.py  optimizer.py  testproblems.py  testproblems_shifted.py
test/: test_testproblems.py
tests/: test_testproblems.py
