[metadata]
name = rt_opt
version = 0.2.0
author = Alexander Geiseler
author_email = don-alejandrino@outlook.com
description = Metaheuristic global optimization algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/don-alejandrino/rt_opt
project_urls =
    Bug Tracker = https://github.com/don-alejandrino/rt_opt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.10
install_requires =
    numpy~=1.26.4
    scipy~=1.12.0

[options.packages.find]
where =